--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-  <title>Spectral by HTML5 UP</title>
+  <title>Match the Bar</title>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1"
         name="viewport"><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,151 +20,23 @@
     <!-- Header -->
     <header class="alt"
             id="header">
-      <h1><a href="index.html">Spectral</a></h1>
-      <nav id="nav">
-        <ul>
-          <li class="special">
-            <a class="menuToggle"
-                href="#menu"><span>Menu</span></a>
-            <div id="menu">
-              <ul>
-                <li>
-                  <a href="index.html">Home</a>
-                </li>
-                <li>
-                  <a href="generic.html">Generic</a>
-                </li>
-                <li>
-                  <a href="elements.html">Elements</a>
-                </li>
-                <li>
-                  <a href="#">Sign Up</a>
-                </li>
-                <li>
-                  <a href="#">Log In</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </nav>
+      <h1><a href="index.html">Match the Bar</a></h1>
     </header><!-- Banner -->
     <section id="banner">
       <div class="inner">
-        <h2>Spectral</h2>
-        <p>Another fine responsive<br>
-        site template freebie<br>
-        crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        <h2>Match the Bar</h2>
+        <p>We help you find<br>
+        a local bar to watch<br>
+        your favorite sports.</p>
         <ul class="actions">
           <li>
             <a class="button special"
                 href="#">Activate</a>
           </li>
         </ul>
-      </div><a class="more scrolly"
-               href="#one">Learn More</a>
+      </div>
     </section><!-- One -->
-    <section class="wrapper style1 special"
-             id="one">
-      <div class="inner">
-        <header class="major">
-          <h2>Arcu aliquet vel lobortis ata nisl<br>
-          eget augue amet aliquet nisl cep donec</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br>
-          fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-        </header>
-        <ul class="icons major">
-          <li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-          <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-          <li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-        </ul>
-      </div>
-    </section><!-- Two -->
-    <section class="wrapper alt style2"
-             id="two">
-      <section class="spotlight">
-        <div class="image"><img alt=""
-             src="images/pic01.jpg"></div>
-        <div class="content">
-          <h2>Magna primis lobortis<br>
-          sed ullamcorper</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-        </div>
-      </section>
-      <section class="spotlight">
-        <div class="image"><img alt=""
-             src="images/pic02.jpg"></div>
-        <div class="content">
-          <h2>Tortor dolore feugiat<br>
-          elementum magna</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-        </div>
-      </section>
-      <section class="spotlight">
-        <div class="image"><img alt=""
-             src="images/pic03.jpg"></div>
-        <div class="content">
-          <h2>Augue eleifend aliquet<br>
-          sed condimentum</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-        </div>
-      </section>
-    </section><!-- Three -->
-    <section class="wrapper style3 special"
-             id="three">
-      <div class="inner">
-        <header class="major">
-          <h2>Accumsan mus tortor nunc aliquet</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br>
-          fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-        </header>
-        <ul class="features">
-          <li class="icon fa-paper-plane-o">
-            <h3>Arcu accumsan</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-          <li class="icon fa-laptop">
-            <h3>Ac Augue Eget</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-          <li class="icon fa-code">
-            <h3>Mus Scelerisque</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-          <li class="icon fa-headphones">
-            <h3>Mauris Imperdiet</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-          <li class="icon fa-heart-o">
-            <h3>Aenean Primis</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-          <li class="icon fa-flag-o">
-            <h3>Tortor Ut</h3>
-            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-          </li>
-        </ul>
-      </div>
-    </section><!-- CTA -->
-    <section class="wrapper style4"
-             id="cta">
-      <div class="inner">
-        <header>
-          <h2>Arcue ut vel commodo</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-        </header>
-        <ul class="actions vertical">
-          <li>
-            <a class="button fit special"
-                href="#">Activate</a>
-          </li>
-          <li>
-            <a class="button fit"
-                href="#">Learn More</a>
-          </li>
-        </ul>
-      </div>
-    </section><!-- Footer -->
+    <!-- Footer -->
     <footer id="footer">
       <ul class="icons">
         <li>
@@ -189,9 +61,7 @@
         </li>
       </ul>
       <ul class="copyright">
-        <li>© Untitled</li>
-        <li>Design: <a href="http://html5up.net">HTML5 UP</a>
-        </li>
+        <li>© Match the Bar</li>
       </ul>
     </footer>
   </div><!-- Scripts -->
