--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <link href="assets/css/main.css"
         rel="stylesheet"><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
+  <style>
+    #main > header {
+      background-color:  #2E3842;
+    }
+  </style>
 </head>
 <body class="landing">
   <!-- Page Wrapper -->
@@ -22,18 +28,94 @@
             id="header">
       <h1><a href="index.html">Match the Bar</a></h1>
     </header><!-- Banner -->
+    <aside>
+      <img alt="site logo"
+             src="images/logo.png">
+    </aside>
     <section id="banner">
       <div class="inner">
         <h2>Match the Bar</h2>
         <p>We help you find<br>
         a local bar to watch<br>
         your favorite sports.</p>
-        <ul class="actions">
-          <li>
-            <a class="button special"
-                href="#">Activate</a>
-          </li>
-        </ul>
+      </div><!-- </section>
+    <section> -->
+      <div>
+        <!-- Begin MailChimp Signup Form -->
+        <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css"
+              rel="stylesheet"
+              type="text/css">
+        <style type="text/css">
+            /*#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }*/
+            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+          <form action="https://matchthebar.us14.list-manage.com/subscribe/post?u=73e4459b9a8562534b5176ed1&amp;id=fe9845fd33"
+                class="validate"
+                id="mc-embedded-subscribe-form"
+                method="post"
+                name="mc-embedded-subscribe-form"
+                novalidate=""
+                target="_blank">
+            <div id="mc_embed_signup_scroll">
+              <h3>Be the first to know</h3>
+              <div class="indicates-required">
+                <span class="asterisk">*</span> indicates required
+              </div>
+              <div class="mc-field-group">
+                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label> <input class="required email"
+                     id="mce-EMAIL"
+                     name="EMAIL"
+                     type="email"
+                     value="">
+              </div>
+              <div class="mc-field-group">
+                <label for="mce-FNAME">First Name</label> <input class=""
+                     id="mce-FNAME"
+                     name="FNAME"
+                     type="text"
+                     value="">
+              </div>
+              <div class="mc-field-group">
+                <label for="mce-LNAME">Last Name</label> <input class=""
+                     id="mce-LNAME"
+                     name="LNAME"
+                     type="text"
+                     value="">
+              </div>
+              <div class="clear"
+                   id="mce-responses">
+                <div class="response"
+                     id="mce-error-response"
+                     style="display:none"></div>
+                <div class="response"
+                     id="mce-success-response"
+                     style="display:none"></div>
+              </div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div aria-hidden="true"
+                   style="position: absolute; left: -5000px;">
+                <input name="b_73e4459b9a8562534b5176ed1_fe9845fd33"
+                     tabindex="-1"
+                     type="text"
+                     value="">
+              </div>
+              <div class="clear">
+                <input class="button special"
+                     id="mc-embedded-subscribe"
+                     name="subscribe"
+                     type="submit"
+                     value="Subscribe">
+              </div>
+            </div>
+          </form>
+        </div>
+        <script src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+             type='text/javascript'>
+        </script>
+        <script type='text/javascript'>
+            (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+        </script> <!--End mc_embed_signup-->
       </div>
     </section><!-- One -->
     <!-- Footer -->
