--- a/index.html
+++ b/index.html
@@ -123,23 +123,11 @@
       <ul class="icons">
         <li>
           <a class="icon fa-twitter"
-              href="#"><span class="label">Twitter</span></a>
-        </li>
-        <li>
-          <a class="icon fa-facebook"
-              href="#"><span class="label">Facebook</span></a>
-        </li>
-        <li>
-          <a class="icon fa-instagram"
-              href="#"><span class="label">Instagram</span></a>
-        </li>
-        <li>
-          <a class="icon fa-dribbble"
-              href="#"><span class="label">Dribbble</span></a>
+              href="https://twitter.com/matchthebar"><span class="label">Twitter</span></a>
         </li>
         <li>
           <a class="icon fa-envelope-o"
-              href="#"><span class="label">Email</span></a>
+              href="matchthebar@gmail.com"><span class="label">Email</span></a>
         </li>
       </ul>
       <ul class="copyright">
