Fixed site responsiveness to work on Desktop, as well as keep the previous functionality

--- a/index.html
+++ b/index.html
@@ -13,21 +13,11 @@
   <link href="assets/css/main.css"
         rel="stylesheet"><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-
-  <style>
-    #main > header {
-      background-color:  #2E3842;
-    }
-  </style>
 </head>
 <body class="landing">
   <!-- Page Wrapper -->
   <div id="page-wrapper">
-    <!-- Header -->
-    <header class="alt"
-            id="header">
-      <h1><a href="index.html">Match the Bar</a></h1>
-    </header><!-- Banner -->
+    <!-- Banner -->
     <aside>
       <img alt="site logo"
              src="images/logo.png">
@@ -38,8 +28,7 @@
         <p>We help you find<br>
         a local bar to watch<br>
         your favorite sports.</p>
-      </div><!-- </section>
-    <section> -->
+      </div>
       <div>
         <!-- Begin MailChimp Signup Form -->
         <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css"
