Changed contact email to info@matchthebar.com

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </li>
         <li>
           <a class="icon fa-envelope-o"
-              href="mailto:matchthebar@gmail.com"><span class="label">Email</span></a>
+              href="mailto:info@matchthebar.com"><span class="label">Email</span></a>
         </li>
       </ul>
       <ul class="copyright">
