Changed subscribe button to be blue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         name="viewport"><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
   <link href="assets/css/main.css"
         rel="stylesheet"><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+  <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css"
+        rel="stylesheet"><!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+        <link href="assets/css/custom.css" rel="stylesheet"  >
 </head>
 <body class="landing">
   <!-- Page Wrapper -->
@@ -31,9 +33,9 @@
       </div>
       <div>
         <!-- Begin MailChimp Signup Form -->
-        <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css"
-              rel="stylesheet"
-              type="text/css">
+        <style>
+
+        </style>
         <style type="text/css">
             /*#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }*/
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
