--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 <head>
   <title>Match the Bar</title>
+  <meta name="theme-color" content="#1761A0">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1"
         name="viewport"><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
