--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
               href="https://twitter.com/matchthebar"><span class="label">Twitter</span></a>
         </li>
         <li>
+          <a class="icon fa-instagram"
+              href="https://instagram.com/matchthebar"><span class="label">Instagram</span></a>
+        </li>
+        <li>
+          <a class="icon fa-facebook"
+              href="https://facebook.com/matchthebar"><span class="label">Facebook</span></a>
+        </li>
+        <li>
           <a class="icon fa-envelope-o"
               href="mailto:info@matchthebar.com"><span class="label">Email</span></a>
         </li>
