--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
       </ul>
       <ul class="copyright">
         <li>© Match the Bar</li>
+        <li>
+          <a href="#">Privacy Policy</a>
+        </li>
       </ul>
     </footer>
   </div><!-- Scripts -->
