--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <ul class="copyright">
         <li>© Match the Bar</li>
         <li>
-          <a href="#">Privacy Policy</a>
+          <a href="privacy.html">Privacy Policy</a>
         </li>
       </ul>
     </footer>
