--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
       <img alt="site logo"
              src="images/logo.png">
     </aside>
+    <header id="header" class="alt">
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a href="#menu" class="menuToggle">
+              <span>
+                Menu
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <section id="banner">
       <div class="inner">
         <h2>Match the Bar</h2>
@@ -173,5 +186,21 @@
 
   <script src="assets/js/main.js">
   </script>
+  <div id="menu">
+    <ul>
+      <li>
+        <a href="index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Home</a>
+      </li>
+      <li>
+        <!--Need to make the view for this page-->
+        <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
+      </li>
+      <li>
+        <!--Need to make the view for this page-->
+        <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
+      </li>
+    </ul>
+    <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
+  </div>
 </body>
 </html>
