--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       </li>
       <li>
         <!--Need to make the view for this page-->
-        <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
+        <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
       </li>
       <li>
         <!--Need to make the view for this page-->
