--- a/privacy.html
+++ b/privacy.html
@@ -53,6 +53,17 @@
       <h1>
         <a href="index.html">Match the Bar</a>
       </h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a href="#menu" class="menuToggle">
+              <span>
+                Menu
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <article id="main">
       <header>
@@ -285,5 +296,21 @@
 
 <script src="assets/js/main.js">
 </script>
+<div id="menu">
+  <ul>
+    <li>
+      <a href="index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Home</a>
+    </li>
+    <li>
+      <!--Need to make the view for this page-->
+      <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
+    </li>
+    <li>
+      <!--Need to make the view for this page-->
+      <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
+    </li>
+  </ul>
+  <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
+</div>
 </body>
 </html>
