--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
   <!-- Page Wrapper -->
   <div id="page-wrapper">
     <!-- Banner -->
-    <aside>
-      <img alt="site logo"
-             src="images/logo.png">
-    </aside>
-    <header id="header" class="alt">
+    <header id="header">
       <nav id="nav">
         <ul>
           <li class="special">
@@ -74,77 +70,53 @@
         <p>We help you find<br>
         a local bar to watch<br>
         your favorite sports.</p>
-      </div>
-      <div>
-        <!-- Begin MailChimp Signup Form -->
-        <div id="mc_embed_signup">
-          <form action="https://matchthebar.us14.list-manage.com/subscribe/post?u=73e4459b9a8562534b5176ed1&amp;id=fe9845fd33"
-                class="validate"
-                id="mc-embedded-subscribe-form"
-                method="post"
-                name="mc-embedded-subscribe-form"
-                novalidate=""
-                target="_blank">
-            <div id="mc_embed_signup_scroll">
-              <h3>Be the first to know</h3>
-              <div class="indicates-required">
-                <span class="asterisk">*</span> indicates required
-              </div>
-              <div class="mc-field-group">
-                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label> <input class="required email"
-                     id="mce-EMAIL"
-                     name="EMAIL"
-                     type="email"
-                     value="">
-              </div>
-              <div class="mc-field-group">
-                <label for="mce-FNAME">First Name</label> <input class=""
-                     id="mce-FNAME"
-                     name="FNAME"
-                     type="text"
-                     value="">
-              </div>
-              <div class="mc-field-group">
-                <label for="mce-LNAME">Last Name</label> <input class=""
-                     id="mce-LNAME"
-                     name="LNAME"
-                     type="text"
-                     value="">
-              </div>
-              <div class="clear"
-                   id="mce-responses">
-                <div class="response"
-                     id="mce-error-response"
-                     style="display:none"></div>
-                <div class="response"
-                     id="mce-success-response"
-                     style="display:none"></div>
-              </div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div aria-hidden="true"
-                   style="position: absolute; left: -5000px;">
-                <input name="b_73e4459b9a8562534b5176ed1_fe9845fd33"
-                     tabindex="-1"
-                     type="text"
-                     value="">
-              </div>
-              <div class="clear">
-                <input class="button special"
-                     id="mc-embedded-subscribe"
-                     name="subscribe"
-                     type="submit"
-                     value="Subscribe">
-              </div>
-            </div>
-          </form>
-        </div>
-        <script src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
-             type='text/javascript'>
-        </script>
-        <script type='text/javascript'>
-            (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
-        </script> <!--End mc_embed_signup-->
+        <img alt="site logo"
+               src="images/logo.png">
       </div>
     </section><!-- One -->
+    <section id="two" class="wrapper alt style2">
+      <section class="spotlight">
+        <div class="content">
+          <h2>
+            We match sports bars & fans
+          </h2>
+          <p>
+            Bars want to get more customers in their bars.
+            <br>
+            Fans want to find somewhere to watch the match.
+          </p>
+        </div>
+        <div class="image">
+          <img src="images/Solution.png" alt>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="content">
+          <h2>
+            Because watching football is more fun together
+          </h2>
+          <p>
+            Easily find a bar to watch your favorite teams in action! No more calling around bars or watching at home on an online stream. Get out supporting!
+          </p>
+        </div>
+        <div class="image">
+          <img src="images/Fan_platform.png" alt>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="content">
+          <h2>
+            Get more butts in seats
+          </h2>
+          <p>
+            Take advantage of that TV sports package, for the price of a couple of "cañas" a week, you can get more sports fans in your bar.
+          </p>
+        </div>
+        <div class="image">
+          <img src="images/Bar_platform.png" alt>
+        </div>
+      </section>
+    </section>
     <!-- Footer -->
     <footer id="footer">
       <ul class="icons">
@@ -189,7 +161,7 @@
   <div id="menu">
     <ul>
       <li>
-        <a href="index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Home</a>
+        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
         <!--Need to make the view for this page-->
