Contact on menu is to email temporarily

--- a/privacy.html
+++ b/privacy.html
@@ -307,7 +307,7 @@
     </li>
     <li>
       <!--Need to make the view for this page-->
-      <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
+      <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
     </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
