--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </li>
       <li>
         <!--Need to make the view for this page-->
-        <a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
+        <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
       </li>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
