--- a/privacy.html
+++ b/privacy.html
@@ -306,6 +306,9 @@
       <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
     </li>
     <li>
+      <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
+    </li>
+    <li>
       <!--Need to make the view for this page-->
       <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
     </li>
