--- a/index.html
+++ b/index.html
@@ -164,11 +164,12 @@
         <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
-        <!--Need to make the view for this page-->
         <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
       </li>
       <li>
-        <!--Need to make the view for this page-->
+        <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
+      </li>
+      <li>
         <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
       </li>
     </ul>
