Landing page duplicated into Spanish

--- a/index_en.html
+++ b/index_en.html
@@ -67,8 +67,9 @@
     <section id="banner">
       <div class="inner">
         <h2>Match the Bar</h2>
-        <p>Encuentra un bar<br>
-        donde ver el partido.</p>
+        <p>Find a local bar<br>
+        to watch your<br>
+        favorite sports.</p>
         <img alt="site logo"
                src="images/logo.png">
       </div>
@@ -77,12 +78,12 @@
       <section class="spotlight">
         <div class="content">
           <h2>
-            Conectamos a los fans con los bares.
+            We match sports bars & fans
           </h2>
           <p>
-            Los bares quieren más clientes.
+            Bars want to get more customers in their bars.
             <br>
-            Los aficionados quieren ver el partido.
+            Fans want to find somewhere to watch the match.
           </p>
         </div>
         <div class="image">
@@ -92,29 +93,27 @@
       <section class="spotlight">
         <div class="content">
           <h2>
-            Ver el partido juntos está más divertido.
+            Because watching football is more fun together
           </h2>
           <p>
-            ¡Es fácil encontrar un bar donde mirar el partido! <br><br> Entendemos la frustración y pérdida de tiempo que puede suponer encontrar un bar para ver tu partido favorito. ¡Basta ya!
+            Easily find a bar to watch your favorite teams in action! No more calling around bars or watching at home on an online stream. Get out supporting!
           </p>
         </div>
         <div class="image">
-          <img src="images/Plataforma_fans.png" alt>
+          <img src="images/Fan_platform.png" alt>
         </div>
       </section>
       <section class="spotlight">
         <div class="content">
           <h2>
-            ¿Quieres atraer más clientes?
+            Get more butts in seats
           </h2>
           <p>
-            Más de 65.000 bares contratan paquetes televisivos de fútbol, pero muchos de ellos no lo promocionan lo suficiente.
-            <br><br>
-            Por el precio de un par de cañas por semana, puedes atraer más clientes a tu bar.
+            Take advantage of that TV sports package, for the price of a couple of "cañas" a week, you can get more sports fans in your bar.
           </p>
         </div>
         <div class="image">
-          <img src="images/Plataforma_bar.png" alt>
+          <img src="images/Bar_platform.png" alt>
         </div>
       </section>
     </section>
@@ -153,7 +152,7 @@
       <ul class="copyright">
         <li>© Match the Bar</li>
         <li>
-          <a href="privacy.html">Política de privicidad</a>
+          <a href="privacy_en.html">Privacy Policy</a>
         </li>
       </ul>
     </footer>
@@ -174,21 +173,21 @@
   <div id="menu">
     <ul>
       <li>
-        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
+        <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
-        <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
+        <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
       </li>
       <li>
         <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
       </li>
       <li>
-        <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contacto</a>
+        <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
       </li>
       <li></li>
         <br><br><br><br>
       <li>
-        <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">English</a>
+        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Español</a>
       </li>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
