--- a/privacy_en.html
+++ b/privacy_en.html
@@ -68,7 +68,7 @@
     <article id="main">
       <header>
         <h2>
-          Política de privicidad
+          Privacy Policy
         </h2>
       </header>
       <section class="wrapper style5">
@@ -290,7 +290,7 @@
   <ul class="copyright">
     <li>© Match the Bar</li>
     <li>
-      <a href="privacy.html">Política de privicidad</a>
+      <a href="privacy_en.html">Privacy Policy</a>
     </li>
   </ul>
 </footer>
