--- a/sign_up_en.html
+++ b/sign_up_en.html
@@ -68,20 +68,20 @@
     <article id="main">
       <header>
         <h2>
-          Registrar
+          Sign up
         </h2>
       </header>
       <section class="wrapper style5">
         <div class="inner">
           <h3>
-            ¿Quieres estar el primero en saber?
+            Be the first to know
           </h3>
           <p>
-            Tenemos previsto lanzar la app en febrero.
-            Si eres un bar que quiere ser el primero en la plataforma - o solo un aficionado del fútbol que desea recibir más información - ¡inscibirte abajo!
+            We estimate launching at the end of this year.
+            Whether you're a bar looking to be the first on the platform - or just a sports fan who wants to be kept in the loop - please sign up below.
           </p>
           <p>
-            Enviamos cada mes una newsletter y tendremos descuentos especiales para bares en la lista. ¡Gracias por unirte con nosotros!
+            We'll be sending out monthly newsletters with our progress and special discounts to bars who sign up before we launch. Thanks for becoming our fan!
           </p>
           <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
@@ -93,26 +93,26 @@
                   novalidate=""
                   target="_blank">
               <div id="mc_embed_signup_scroll">
-                <h4>Suscribirte para más info</h4>
+                <h4>Sign up for more info</h4>
                 <div class="indicates-required">
-                  <span class="asterisk">*</span> obligatorio
+                  <span class="asterisk">*</span> indicates required
                 </div>
                 <div class="mc-field-group">
-                  <label for="mce-EMAIL">Correo electrónico <span class="asterisk">*</span></label> <input class="required email"
+                  <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label> <input class="required email"
                        id="mce-EMAIL"
                        name="EMAIL"
                        type="email"
                        value="">
                 </div>
                 <div class="mc-field-group">
-                  <label for="mce-FNAME">Nombre</label> <input class=""
+                  <label for="mce-FNAME">First Name</label> <input class=""
                        id="mce-FNAME"
                        name="FNAME"
                        type="text"
                        value="">
                 </div>
                 <div class="mc-field-group">
-                  <label for="mce-LNAME">Apellido</label> <input class=""
+                  <label for="mce-LNAME">Last Name</label> <input class=""
                        id="mce-LNAME"
                        name="LNAME"
                        type="text"
@@ -139,7 +139,7 @@
                        id="mc-embedded-subscribe"
                        name="subscribe"
                        type="submit"
-                       value="Suscribirte">
+                       value="Subscribe">
                 </div>
               </div>
             </form>
@@ -189,7 +189,7 @@
   <ul class="copyright">
     <li>© Match the Bar</li>
     <li>
-      <a href="privacy.html">Política de privicidad</a>
+      <a href="privacy_en.html">Privacy Policy</a>
     </li>
   </ul>
 </footer>
@@ -210,21 +210,21 @@
 <div id="menu">
   <ul>
     <li>
-      <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
+      <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
     </li>
     <li>
-      <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
+      <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
     </li>
     <li>
       <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
     </li>
     <li>
-      <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contacto</a>
+      <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
     </li>
     <li></li>
       <br><br><br><br>
     <li>
-      <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">English</a>
+      <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Español</a>
     </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
