--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <li></li>
         <br><br><br><br>
       <li>
-        <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">English</a>
+        <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
       </li>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
