--- a/index_en.html
+++ b/index_en.html
@@ -187,7 +187,7 @@
       <li></li>
         <br><br><br><br>
       <li>
-        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Español</a>
+        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/spanish_flag.png" width="60px" height="35px" /></a>
       </li>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
