--- a/privacy_en.html
+++ b/privacy_en.html
@@ -51,7 +51,7 @@
   <div id="page-wrapper">
     <header id="header">
       <h1>
-        <a href="index.html">Match the Bar</a>
+        <a href="index_en.html">Match the Bar</a>
       </h1>
       <nav id="nav">
         <ul>
@@ -325,7 +325,7 @@
     <li></li>
       <br><br><br><br>
     <li>
-      <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">English</a>
+      <a href="privacy.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/spanish_flag.png" width="60px" height="35px" /></a>
     </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
