--- a/sign_up.html
+++ b/sign_up.html
@@ -223,9 +223,9 @@
     </li>
     <li></li>
       <br><br><br><br>
-    <li>
-      <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">English</a>
-    </li>
+      <li>
+        <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
+      </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
 </div>
