--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 <head>
+  <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
   <title>Match the Bar</title>
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
