Changed football to sports, more generic wording

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             ¿Quieres atraer más clientes?
           </h2>
           <p>
-            Más de 65.000 bares contratan paquetes televisivos de fútbol, pero muchos de ellos no lo promocionan lo suficiente.
+            Más de 65.000 bares contratan paquetes televisivos de deporte, pero muchos de ellos no lo promocionan lo suficiente.
             <br><br>
             Por el precio de un par de cañas por semana, puedes atraer más clientes a tu bar.
           </p>
