--- a/index_en.html
+++ b/index_en.html
@@ -93,7 +93,7 @@
       <section class="spotlight">
         <div class="content">
           <h2>
-            Because watching football is more fun together
+            Because watching sports is more fun together
           </h2>
           <p>
             Easily find a bar to watch your favorite teams in action! No more calling around bars or watching at home on an online stream. Get out supporting!
