Adding bar page menu option on all pages

--- a/bar.html
+++ b/bar.html
@@ -183,6 +183,9 @@
       <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
     </li>
     <li>
+      <a href="bar.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">¿Eres un bar?</a>
+    </li>
+    <li>
       <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
     </li>
     <li>
