--- a/privacy_en.html
+++ b/privacy_en.html
@@ -311,16 +311,19 @@
 <div id="menu">
   <ul>
     <li>
-      <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
+      <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
     </li>
     <li>
-      <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
+      <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign up</a>
+    </li>
+    <li>
+      <a href="bar_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Are you a bar?</a>
     </li>
     <li>
       <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
     </li>
     <li>
-      <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contacto</a>
+      <a href="mailto:info@matchthebar.com" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Contact</a>
     </li>
     <li></li>
       <br><br><br><br>
