--- a/sign_up_en.html
+++ b/sign_up_en.html
@@ -206,6 +206,9 @@
       <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a>
     </li>
     <li>
+      <a href="bar_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Are you a bar?</a>
+    </li>
+    <li>
       <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
     </li>
     <li>
