Translated, fixed flag issues and added breaks for space

--- a/bar.html
+++ b/bar.html
@@ -69,7 +69,7 @@
     <article>
       <header id="background">
         <h2 id="border">
-          Join our community
+          Únete a nuestra comunidad
         </h2>
       </header>
         <section class="wrapper alt style2" id="two">
@@ -79,10 +79,12 @@
                 <source src="videos/App_search.mp4" type="video/mp4">
               </video>          </div>
             <div class="content">
-              <h3 class="black_highlight"><span>Increase your digital presence</span></h3>
-              <p><strong class="blue_highlight">Visibility</strong>: customers will find you when looking for a sports match or competition.</p>
-              <p><strong class="blue_highlight">Confidence</strong>: offer a more detailed service offering, by allowing customers to choose to watch their favourite match.</p>
-              <p><strong class="blue_highlight">Transparency</strong>: customers value being able to find your bar.</p>
+              <br>
+              <h3 class="black_highlight"><span>Mejore su presencia en internet</span></h3>
+              <p><strong class="blue_highlight">Visibilidad</strong>: los clientes le encontrarán cuando busquen un partido de fútol o un campeonato en concreto.</p>
+              <p><strong class="blue_highlight">Confianza</strong>: ofrecerá una información más detallada de sus servicios, facilitando que los clientes le escojan para ver su partido favorito.</p>
+              <p><strong class="blue_highlight">Transparencia</strong>: los clientes valoran muy positivamente poder consultar el precio de sus servicios/productos.</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -90,9 +92,11 @@
               <source src="videos/talking_bar.mp4" type="video/mp4">
             </video>
             <div class="content">
-              <h3 class="black_highlight"><span>Improve your online reputation</span></h3>
-              <p><strong class="blue_highlight">Differentiate yourself</strong>: put yourself in the customers' shoes and explain why your bar is unique. Answer their frequently asked questions about the menu or type of sports you show.</p>
-              <p><strong class="blue_highlight">Show off</strong>: do you have nachos to die for? Do you have 10 screens with multiple games at a time? Let potential customers know!</p>
+              <br>
+              <h3 class="black_highlight"><span>Mejore su reputación online</span></h3>
+              <p><strong class="blue_highlight">Su valor diferencial</strong>: póngase en la piel del cliente y explique lo que considera que le diferencia de otros bares adelantándose a las preguntas más comunes, como por ejemplo, lo que incluye el menú o a qué tipo de aficionado va dirigido.</p>
+              <p><strong class="blue_highlight">Sus puntos fuertes</strong>: explique en qué se diferencia y en qué destaca respecto a los demás bares, por ejemplo: números de televisores, proyector, barra, etc.</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -102,10 +106,12 @@
               </video>
             </div>
             <div class="content">
-              <h3 class="black_highlight"><span>Manage your time better</span></h3>
-              <p><strong class="blue_highlight">Measure</strong>: see the results and how many customers have visited your profile.</p>
-              <p><strong class="blue_highlight">Analyze</strong>: understand the implications and best-performing sports for your bar.</p>
-              <p><strong class="blue_highlight">Learn</strong>: our marketing tips will enable you to improve your results.</p>
+              <br>
+              <h3 class="black_highlight"><span>Gestione mejor su tiempo</span></h3>
+              <p><strong class="blue_highlight">Medir</strong>: los resultados y cuántos clientes han visitado a su bar.</p>
+              <p><strong class="blue_highlight">Analizar</strong>: comprenda las implicaciones y los mejores deportes para su bar.</p>
+              <p><strong class="blue_highlight">Aprender</strong>: nuestros consejos de marketing le permitirán mejorar sus resultados.</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -113,10 +119,10 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
             </div>
             <div class="content" style="text-align: center">
-              <h2>Ready to <span class="blue_highlight">get started?</span></h2>
-              <p>Schedule a free demo today.</p>
+              <h2>¿Estás listo <span class="blue_highlight">para empezar?</span></h2>
+              <p>Programe una demostración gratuita hoy.</p>
               <span style="color: #25d366"><p><a class="icon fa-whatsapp" href="https://api.whatsapp.com/send?phone=34687676487"> Whatsapp</a></p></span>
-              <span class="blue_highlight"><p><a class="icon fa-envelope-o" href="mailto:info@matchthebar.com"> Email</a></span>
+              <span class="blue_highlight"><p><a class="icon fa-envelope-o" href="mailto:info@matchthebar.com"> Correo electrónico</a></span>
           </section>
         </section>
     </article>
@@ -194,7 +200,7 @@
     <li></li>
       <br><br><br><br>
       <li>
-        <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
+        <a href="bar_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
       </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
