--- a/bar_en.html
+++ b/bar_en.html
@@ -79,10 +79,12 @@
                 <source src="videos/App_search.mp4" type="video/mp4">
               </video>          </div>
             <div class="content">
+              <br>
               <h3 class="black_highlight"><span>Increase your digital presence</span></h3>
               <p><strong class="blue_highlight">Visibility</strong>: customers will find you when looking for a sports match or competition.</p>
               <p><strong class="blue_highlight">Confidence</strong>: offer a more detailed service offering, by allowing customers to choose to watch their favourite match.</p>
               <p><strong class="blue_highlight">Transparency</strong>: customers value being able to find your bar.</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -90,9 +92,11 @@
               <source src="videos/talking_bar.mp4" type="video/mp4">
             </video>
             <div class="content">
+              <br>
               <h3 class="black_highlight"><span>Improve your online reputation</span></h3>
               <p><strong class="blue_highlight">Differentiate yourself</strong>: put yourself in the customers' shoes and explain why your bar is unique. Answer their frequently asked questions about the menu or type of sports you show.</p>
               <p><strong class="blue_highlight">Show off</strong>: do you have nachos to die for? Do you have 10 screens with multiple games at a time? Let potential customers know!</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -102,10 +106,12 @@
               </video>
             </div>
             <div class="content">
+              <br>
               <h3 class="black_highlight"><span>Manage your time better</span></h3>
               <p><strong class="blue_highlight">Measure</strong>: see the results and how many customers have visited your profile.</p>
               <p><strong class="blue_highlight">Analyze</strong>: understand the implications and best-performing sports for your bar.</p>
               <p><strong class="blue_highlight">Learn</strong>: our marketing tips will enable you to improve your results.</p>
+              <br>
             </div>
           </section>
           <section class="spotlight">
@@ -156,7 +162,7 @@
   <ul class="copyright">
     <li>© Match the Bar</li>
     <li>
-      <a href="privacy.html">Política de privicidad</a>
+      <a href="privacy_en.html">Privacy policy</a>
     </li>
   </ul>
 </footer>
@@ -194,7 +200,7 @@
     <li></li>
       <br><br><br><br>
       <li>
-        <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
+        <a href="bar.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/spanish_flag.png" width="60px" height="35px" /></a>
       </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
