--- a/bar.html
+++ b/bar.html
@@ -81,7 +81,7 @@
             <div class="content">
               <br>
               <h3 class="black_highlight"><span>Mejore su presencia en internet</span></h3>
-              <p><strong class="blue_highlight">Visibilidad</strong>: los clientes le encontrarán cuando busquen un partido de fútol o un campeonato en concreto.</p>
+              <p><strong class="blue_highlight">Visibilidad</strong>: los clientes le encontrarán cuando busquen un partido de fútbol o un campeonato en concreto.</p>
               <p><strong class="blue_highlight">Confianza</strong>: ofrecerá una información más detallada de sus servicios, facilitando que los clientes le escojan para ver su partido favorito.</p>
               <p><strong class="blue_highlight">Transparencia</strong>: los clientes valoran muy positivamente poder consultar el precio de sus servicios/productos.</p>
               <br>
