--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <section class="spotlight">
         <div class="content">
           <h2>
-            Ver el partido juntos está más divertido.
+            Ver el partido juntos es más divertido.
           </h2>
           <p>
             ¡Es fácil encontrar un bar donde mirar el partido! <br><br> Entendemos la frustración y pérdida de tiempo que puede suponer encontrar un bar para ver tu partido favorito. ¡Basta ya!
