--- a/bar_en.html
+++ b/bar_en.html
@@ -75,7 +75,7 @@
         <section class="wrapper alt style2" id="two">
           <section class="spotlight">
             <div class="image">
-              <video width="560" height="315" autoplay loop>
+              <video width="100%" height="315" autoplay loop>
                 <source src="videos/App_search.mp4" type="video/mp4">
               </video>          </div>
             <div class="content">
@@ -88,7 +88,7 @@
             </div>
           </section>
           <section class="spotlight">
-            <video width="560" height="315" autoplay loop>
+            <video width="100%" height="315" autoplay loop>
               <source src="videos/talking_bar.mp4" type="video/mp4">
             </video>
             <div class="content">
@@ -101,7 +101,7 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <video width="560" height="315" autoplay loop>
+              <video width="100%" height="315" autoplay loop>
                 <source src="videos/Graphs.mp4" type="video/mp4">
               </video>
             </div>
@@ -116,7 +116,7 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
             </div>
             <div class="content" style="text-align: center">
               <h2>Ready to <span class="blue_highlight">get started?</span></h2>
