Still fixing video responsive issues on bar page

--- a/bar.html
+++ b/bar.html
@@ -75,7 +75,7 @@
         <section class="wrapper alt style2" id="two">
           <section class="spotlight">
             <div class="image">
-              <video width="100%" height="315" autoplay loop>
+              <video width="100%" autoplay loop>
                 <source src="videos/App_search.mp4" type="video/mp4">
               </video>          </div>
             <div class="content">
@@ -88,9 +88,11 @@
             </div>
           </section>
           <section class="spotlight">
-            <video width="100%" height="315" autoplay loop>
-              <source src="videos/talking_bar.mp4" type="video/mp4">
-            </video>
+            <div class="image">
+              <video width="100%" autoplay loop>
+                <source src="videos/talking_bar.mp4" type="video/mp4">
+              </video>
+            </div>
             <div class="content">
               <br>
               <h3 class="black_highlight"><span>Mejore su reputación online</span></h3>
@@ -101,7 +103,7 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <video width="100%" height="315" autoplay loop>
+              <video width="100%" autoplay loop>
                 <source src="videos/Graphs.mp4" type="video/mp4">
               </video>
             </div>
@@ -116,7 +118,9 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+              </div>
             </div>
             <div class="content" style="text-align: center">
               <h2>¿Estás listo <span class="blue_highlight">para empezar?</span></h2>
