--- a/bar_en.html
+++ b/bar_en.html
@@ -75,9 +75,10 @@
         <section class="wrapper alt style2" id="two">
           <section class="spotlight">
             <div class="image">
-              <video width="100%" height="315" autoplay loop>
+              <video width="100%" autoplay loop>
                 <source src="videos/App_search.mp4" type="video/mp4">
-              </video>          </div>
+              </video>
+            </div>
             <div class="content">
               <br>
               <h3 class="black_highlight"><span>Increase your digital presence</span></h3>
@@ -88,9 +89,11 @@
             </div>
           </section>
           <section class="spotlight">
-            <video width="100%" height="315" autoplay loop>
-              <source src="videos/talking_bar.mp4" type="video/mp4">
-            </video>
+            <div class="image">
+              <video width="100%" autoplay loop>
+                <source src="videos/talking_bar.mp4" type="video/mp4">
+              </video>
+            </div>
             <div class="content">
               <br>
               <h3 class="black_highlight"><span>Improve your online reputation</span></h3>
@@ -101,7 +104,7 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <video width="100%" height="315" autoplay loop>
+              <video width="100%" autoplay loop>
                 <source src="videos/Graphs.mp4" type="video/mp4">
               </video>
             </div>
@@ -116,7 +119,10 @@
           </section>
           <section class="spotlight">
             <div class="image">
-              <iframe width="100%" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+              <div class="videoWrapper">
+                <!-- videowrapper info https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php -->
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
+              </div>
             </div>
             <div class="content" style="text-align: center">
               <h2>Ready to <span class="blue_highlight">get started?</span></h2>
