Replacing homepage image with the fan teaser video

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
   <title>Match the Bar</title>
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/bar.css" />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
     window.addEventListener("load", function(){
@@ -87,7 +88,9 @@
           </p>
         </div>
         <div class="image">
-          <img src="images/Solution.png" alt>
+          <div class="videoWrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JlVxmH5bUhM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
         </div>
       </section>
       <section class="spotlight">
