Bar background image

--- a/bar.html
+++ b/bar.html
@@ -67,7 +67,7 @@
       </nav>
     </header>
     <article>
-      <header id="background">
+      <header id="background" class="videoWrapper">
         <h2 id="border">
           Únete a nuestra comunidad
         </h2>
