Bar background updates

--- a/bar.html
+++ b/bar.html
@@ -66,10 +66,10 @@
         </ul>
       </nav>
     </header>
-    <article>
-      <header id="background" class="videoWrapper">
+    <article id="main">
+      <header id="bar_background_image">
         <h2 id="border">
-          Únete a nuestra comunidad
+          Únete con nuestra comunidad
         </h2>
       </header>
         <section class="wrapper alt style2" id="two">
