Removed bar page background image and updated formatting on index page

--- a/bar.html
+++ b/bar.html
@@ -67,7 +67,7 @@
       </nav>
     </header>
     <article id="main">
-      <header id="bar_background_image">
+      <header>
         <h2 id="border">
           Únete con nuestra comunidad
         </h2>
