--- a/bar_en.html
+++ b/bar_en.html
@@ -66,8 +66,8 @@
         </ul>
       </nav>
     </header>
-    <article>
-      <header id="background">
+    <article id="main">
+      <header>
         <h2 id="border">
           Join our community
         </h2>
