--- a/index.html
+++ b/index.html
@@ -78,13 +78,11 @@
     <section id="two" class="wrapper alt style2">
       <section class="spotlight">
         <div class="content">
-          <h2>
-            Conectamos a los fans con los bares.
-          </h2>
+          <h3 class="black_highlight"><span>Conectamos a los fans con los bares</span></h3>
           <p>
-            Los bares quieren más clientes.
-            <br>
-            Los aficionados quieren ver el partido.
+            Los aficionados quieren <strong class="blue_highlight">ver el partido</strong>.
+            <br><br>
+            Los bares quieren <strong class="blue_highlight">más clientes</strong>.
           </p>
         </div>
         <div class="image">
@@ -95,11 +93,9 @@
       </section>
       <section class="spotlight">
         <div class="content">
-          <h2>
-            Ver el partido juntos es más divertido.
-          </h2>
+          <h3 class="black_highlight"><span>Ver el partido juntos es más divertido</span></h3>
           <p>
-            ¡Es fácil encontrar un bar donde mirar el partido! <br><br> Entendemos la frustración y pérdida de tiempo que puede suponer encontrar un bar para ver tu partido favorito. ¡Basta ya!
+            ¡<strong class="blue_highlight">Es fácil</strong> encontrar un bar donde mirar el partido! <br><br> Entendemos<strong class="blue_highlight"> la frustración y pérdida de tiempo </strong>que puede suponer encontrar un bar para ver tu partido favorito. ¡Basta ya!
           </p>
         </div>
         <div class="image">
@@ -108,13 +104,11 @@
       </section>
       <section class="spotlight">
         <div class="content">
-          <h2>
-            ¿Quieres atraer más clientes?
-          </h2>
+          <h3 class="black_highlight"><span>¿Quieres atraer más clientes?</span></h3>
           <p>
-            Más de 65.000 bares contratan paquetes televisivos de deporte, pero muchos de ellos no lo promocionan lo suficiente.
+            Más de <strong class="blue_highlight">65.000 bares contratan paquetes televisivos de deporte</strong>, pero muchos de ellos no lo promocionan lo suficiente.
             <br><br>
-            Por el precio de un par de cañas por semana, puedes atraer más clientes a tu bar.
+            Por el precio de un par de cañas por semana, puedes <strong class="blue_highlight">atraer más clientes a tu bar</strong>.
           </p>
         </div>
         <div class="image">
