--- a/sign_up.html
+++ b/sign_up.html
@@ -67,7 +67,7 @@
     </header>
     <article id="main">
       <header>
-        <h2>
+        <h2 id="border">
           Registrar
         </h2>
       </header>
