English version of index page updates

--- a/index_en.html
+++ b/index_en.html
@@ -78,13 +78,13 @@
     <section id="two" class="wrapper alt style2">
       <section class="spotlight">
         <div class="content">
-          <h2>
+          <h3 class="black_highlight"><span>
             We match sports bars & fans
-          </h2>
+          </span></h3>
           <p>
-            Bars want to get more customers in their bars.
-            <br>
-            Fans want to find somewhere to watch the match.
+            Fans want to find somewhere to <strong class="blue_highlight">watch the match</strong>.
+            <br><br>
+            Bars want to <strong class="blue_highlight">get more customers</strong> in their bars.
           </p>
         </div>
         <div class="image">
@@ -95,11 +95,10 @@
       </section>
       <section class="spotlight">
         <div class="content">
-          <h2>
-            Because watching sports is more fun together
-          </h2>
+          <h3 class="black_highlight"><span>Because watching sports is more fun together</span></h3>
           <p>
-            Easily find a bar to watch your favorite teams in action! No more calling around bars or watching at home on an online stream. Get out supporting!
+            <strong class="blue_highlight">Easily</strong> find a bar to watch your favorite teams in action! No more calling around bars or watching at home on an online stream.
+            <strong class="blue_highlight">Get out supporting!</strong>
           </p>
         </div>
         <div class="image">
@@ -108,11 +107,11 @@
       </section>
       <section class="spotlight">
         <div class="content">
-          <h2>
-            Get more butts in seats
-          </h2>
+          <h3 class="black_highlight"><span>Get more butts in seats</span></h3>
           <p>
-            Take advantage of that TV sports package, for the price of a couple of "cañas" a week, you can get more sports fans in your bar.
+            <strong class="blue_highlight">Take advantage</strong> of that TV sports package.
+            <br><br>
+            For the price of a couple of "cañas" a week, you can <strong class="blue_highlight">get more sports fans in your bar</strong>.
           </p>
         </div>
         <div class="image">
