--- a/bar.html
+++ b/bar.html
@@ -69,7 +69,7 @@
     <article id="main">
       <header>
         <h2 id="border">
-          Únete con nuestra comunidad
+          Únete a nuestra comunidad
         </h2>
       </header>
         <section class="wrapper alt style2" id="two">
