--- a/index_en.html
+++ b/index_en.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-  <title>Match the Bar</title>
+  <title>Match the Bar - Where to watch the match?</title>
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bar.css" />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
